--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-GOOGLE_API_KEY
+GOOGLE_API_KEY=AIzaSyA_eX7vxx-4oY6gzN0Ap_EczIapMN9hkY0
+
+DB_HOST=localhost
+DB_POST=5432
+DB_DATABASE=python
+DB_USER=postgres
+DB_PASSWORD=minhasenha
